[package]
name = "overseer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dekor = "0.1.0"
serde = { version = "1", features = ["derive"] }
simplicio = "0.1.3"
tokio = "1.35.1"
walkdir = "2.4.0"
