[package]
name = "overseer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
bincode = "1.3.3"
dekor = "0.1.0"
futures = "0.3.30"
serde = { version = "1", features = ["derive"] }
simplicio = "0.1.3"
tokio = { version = "1.35.1", features = ["full"] }
walkdir = "2.4.0"
