[package]
name = "overseer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base imports
simplicio = "0.1.3"
dekor = "0.1.0"

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"

# Async / FS walking
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
async-recursion = "1.0.5"
